--- a/README.Rmd
+++ b/README.Rmd
@@ -16,5 +16,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-rstatsvideo is a twitter-bot that share youtube video on R.
+[rstatsvideo](https://twitter.com/rstatsvideo) is a twitter-bot that shares youtube videos on R.
+
+rstatsvideo shares the new videos from the youtube channels in the files "data/list_channel.txt".
 
