--- a/README.Rmd
+++ b/README.Rmd
@@ -18,5 +18,6 @@ knitr::opts_chunk$set(
 
 [rstatsvideo](https://twitter.com/rstatsvideo) is a twitter-bot that shares youtube videos on R.
 
-rstatsvideo shares the new videos from the youtube channels in the files "data/list_channel.txt".
+rstatsvideo shares the new videos from the youtube channels listed in the file "data/list_channel.txt".
+
 
