update performance workflow

--- a/index.Rmd
+++ b/index.Rmd
@@ -42,7 +42,7 @@ tb_perf<- readr::read_delim("data/performance.csv", delim =";",col_types = cols(
   id_video = col_character(), ymd_hms_video = col_datetime(format = ""),
   id_twitter = col_character(), count_view = col_integer(),
   count_comment = col_integer(), url_channel = col_character(),
-  url_video = col_character(), today = col_date(format = "")
+  url_video = col_character(), ymd_update = col_date(format = "")
 ),lazy = F)
 
 tb_perf<-
