--- a/README.Rmd
+++ b/README.Rmd
@@ -79,7 +79,7 @@ gg_channel<-
   labs(title = "Top 10: Most productive channels", 
        subtitle = glue("Data collected using {tuber}",.open = "{{", .close="}}"),
        y= "Number of videos",x =NULL,
-       caption = glue("Data updated between {range_update[2]}"))+
+       caption = glue("Last update: {range_update[2]}"))+
   theme(legend.position = "none")
 gg_channel
 ```
