--- a/index.Rmd
+++ b/index.Rmd
@@ -3,7 +3,6 @@ title: "rstatsvideo"
 output: 
   flexdashboard::flex_dashboard:
     orientation: columns
-    vertical_layout: fill
 ---
 
 ```{r setup, include=FALSE}
@@ -19,18 +18,12 @@ library(glue)
 library(ggplot2)
 library(ggiraph)
 library(forcats)
+library(scales)
 ```
 
 
 <!-- https://www.r-bloggers.com/2020/09/deploying-flexdashboard-on-github-pages/ -->
 
-
-# Channels
-
-<!-- Column {data-width=650} -->
-<!-- ----------------------------------------------------------------------- -->
-
-### Explore Youtube Channels
 
 ```{r,include=FALSE}
 
@@ -81,104 +74,111 @@ tb_perf_channel <-
   select(Channel = channel, Twitter =url_twitter, `Number of videos` = count_video, `Total number of views` =  count_view)
 
 
+num_format = comma_format(accuracy = 1, big.mark = " ", decimal.mark = ".")
+range_update = tb_perf%>%pull(ymd_update)%>%range()
 
-```
-
-
-```{r}
-tb_perf_channel%>%
-  DT::datatable(escape = FALSE,
-                filter = list(position = 'top', clear = FALSE),
-                options = list(
-    search = list( caseInsensitive = TRUE),
-    pageLength = 20
-  ),
-  caption = glue("Oldest update: {date_update}"))
 
 ```
 
 
 
-# Videos
+# Overview
 
-Column {.tabset}
--------------------------------------
+Column
+-----------------------------------------------------------------------
 
-
-### All Youtube Videos from R-Ladies channels
-
+### Numbers of Channels {.value-box}
 
 ```{r}
-gg<-
+valueBox(num_format(nrow(tb_perf_channel)), caption = "Numbers of Channels", icon="fa-user-circle-o")
+```
+
+
+### Top Channels
+
+
+```{r echo=FALSE,dev="svg"}
+
+tb_perf_gg <-
   tb_perf%>%
-  filter(str_detect(name_channel,fixed("ladies",ignore_case = TRUE)))%>%
-  mutate(name_channel= factor(name_channel,ordered = T),
-         name_channel=fct_rev(name_channel))%>%
-         #,
-         #name_channel = reorder(name_channel,name_channel,length)
-         #)%>%
-  ggplot(aes(x = ymd_hms_video, y = name_channel,color = name_channel))+
-  scale_x_datetime(limits = range(tb_perf$ymd_hms_video))+
-  geom_point_interactive(aes(tooltip = title_video,
-                             onclick = paste0('window.open("', url_video , '")'),
-                             data_id = id_video),
-                         show.legend = F)+
-  labs(title = "R-Ladies channels - Click to access the video", 
-       x = "Release date",y = "")+
-  #scale_y_reverse()+
+  group_by(name_channel,id_channel,url_channel)%>%
+  summarise(count_video = n(),
+            count_view = sum(count_view),
+            count_comment = sum(count_comment),.groups = "drop")%>%
+  mutate(channel = glue("{name_channel}\n{url_channel}"))
+
+
+
+gg_channel<-
+  tb_perf_gg%>%
+  arrange(desc(count_video))%>%
+  slice(1:10)%>%
+  mutate(name_channel = reorder(name_channel, count_video))%>%
+  ggplot(aes(x =name_channel, y= count_video,fill = name_channel))+
+  geom_col()+
+  coord_flip()+
+  geom_text(aes(label=num_format(count_video)),hjust=1.1)+
+  scale_y_continuous(expand = expansion(c(0, 0.05) ),
+                     labels = num_format)+
   theme_bw()+
-  theme(axis.text.y = element_text(size=2),
-        axis.text.x = element_text(size=4),
-        axis.title.x = element_text(size=5),
-        panel.grid.minor.y = element_line(size=1))
-girafe(code = print(gg),
-       pointsize = 1,
-       options = list(
-         opts_sizing(rescale = TRUE, width = 1)),
-       height_svg = 2.4)
+  labs(title = "Top 10: Most productive channels", 
+       subtitle = glue("Data collected using {tuber}",.open = "{{", .close="}}"),
+       y= "Number of videos",x =NULL,
+       caption = glue("Last update: {range_update[2]}"))+
+  theme(legend.position = "none")
+gg_channel
 ```
 
 
+Column
+-----------------------------------------------------------------------
 
 
-
-
-
-
-### All Youtube Videos
+### Numbers of Videos {.value-box}
 
 
 ```{r}
-gg<-
-  tb_perf%>%
-  filter(!str_detect(name_channel,fixed("ladies",ignore_case = TRUE)))%>%
-  mutate(name_channel= factor(name_channel,ordered = T),
-         name_channel=fct_rev(name_channel))%>%
-         #,
-         #name_channel = reorder(name_channel,name_channel,length)
-         #)%>%
-  ggplot(aes(x = ymd_hms_video, y = name_channel,color = name_channel))+
-  scale_x_datetime(limits = range(tb_perf$ymd_hms_video))+
-  geom_point_interactive(aes(tooltip = title_video,
-                             onclick = paste0('window.open("', url_video , '")'),
-                             data_id = id_video),
-                         show.legend = F)+
-  labs(title = "Other channels - Click to access the video", 
-       x = "Release date",y = "")+
-  #scale_y_reverse()+
-  theme_bw()+
-  theme(axis.text.y = element_text(size=2),
-        axis.text.x = element_text(size=4),
-        axis.title.x = element_text(size=5),
-        panel.grid.minor.y = element_line(size=1))
-girafe(code = print(gg),
-       pointsize = 1,
-       options = list(
-         opts_sizing(rescale = TRUE, width = 1)),
-       height_svg = 2.4)
+valueBox(num_format(nrow(tb_perf_video)), caption = "Numbers of Videos", icon="fa-video-camera")
 ```
 
-### Table of all Youtube Videos
+
+
+### Top Videos
+
+
+```{r echo=FALSE,dev="svg"}
+
+gg_video<-
+  tb_perf%>%
+  arrange(desc(count_view))%>%
+  slice(1:10)%>%
+  mutate(title_video = str_remove(title_video,fixed("- YouTube")))%>%
+  mutate(title_video = str_trim((title_video)))%>%
+  mutate(title_video = case_when(
+    nchar(title_video)>50~glue("{stringr::str_sub(title_video,1,47)}..."),
+    TRUE~title_video))%>%
+  mutate(title = glue("{title_video}\n{name_channel}"))%>%
+  mutate(title = reorder(title, count_view))%>%
+  ggplot(aes(x =title , y= count_view,fill = title))+
+  geom_col()+
+  coord_flip()+
+  geom_text(aes(label=num_format(count_view)),hjust=1.1)+
+  scale_y_continuous(expand = expansion(c(0, 0.05) ),
+                     labels = num_format)+
+  theme_bw()+
+  labs(title = "Top 10: Most viewed videos", 
+       subtitle = glue("Data collected using {tuber}",.open = "{{", .close="}}"),
+       y= "Total of views",x =NULL,
+       caption = glue("Data updated between {range_update[1]} and {range_update[2]}"))+
+  theme(legend.position = "none")
+gg_video
+```
+
+
+
+
+
+# All Youtube Videos
 
 
 ```{r}
@@ -192,4 +192,183 @@ tb_perf_video%>%
   caption = glue("Oldest update: {date_update}"))
 
 ```
+
+
+
+
+
+
+<!-- Row -->
+<!-- ----------------------------------------------------------------------- -->
+
+<!-- #### balbal -->
+<!-- blalba -->
+
+<!-- # Channels -->
+
+<!-- <!-- Column {data-width=650} --> -->
+<!-- <!-- ----------------------------------------------------------------------- --> -->
+
+<!-- ### Explore Youtube Channels -->
+
+<!-- ```{r,include=FALSE} -->
+
+
+
+<!-- tb_perf<- readr::read_delim("data/performance.csv", delim =";",col_types = cols( -->
+<!--   name_channel = col_character(), id_channel = col_character(), -->
+<!--   id_video = col_character(), ymd_hms_video = col_datetime(format = ""), -->
+<!--   id_twitter = col_character(), count_view = col_integer(), -->
+<!--   count_comment = col_integer(), url_channel = col_character(), -->
+<!--   url_video = col_character(), ymd_update = col_date(format = "") -->
+<!-- ),lazy = F) -->
+
+
+<!-- date_update <- min(tb_perf$ymd_update) -->
+
+
+<!-- tb_perf<- -->
+<!--   tb_perf%>% -->
+<!--     mutate(title_video = str_remove(title_video,"- YouTube"), -->
+<!--          title_video = str_trim(title_video)) -->
+
+<!-- tb_perf_video <- -->
+<!--   tb_perf%>% -->
+<!--   arrange(desc(count_view))%>% -->
+<!--   mutate(channel = glue("<a href={url_channel}>{name_channel}</a>"))%>% -->
+<!--   mutate(video = glue("<a href={url_video}>{title_video}</a>"))%>% -->
+<!--   mutate(url_twitter = case_when(!is.na(id_twitter)~glue("<a href=https://twitter.com/{id_twitter}>@{id_twitter}</a>"), -->
+<!--                                  TRUE~"-"))%>% -->
+<!--   mutate(name_channel = as.factor(name_channel))%>% -->
+<!--   mutate(date = ymd(as_date(ymd_hms_video)))%>% -->
+<!--   select(Channel = channel, Twitter =url_twitter, Video = video,Date=date, `Number of views` =  count_view, -->
+<!--           `Number of comments` =  count_comment) -->
+
+
+
+<!-- tb_perf_channel <- -->
+<!--   tb_perf%>% -->
+<!--   group_by(name_channel,id_channel,url_channel,id_twitter)%>% -->
+<!--   summarise(count_video = n(), -->
+<!--             count_view = sum(count_view), -->
+<!--             count_comment = sum(count_comment),.groups = "drop")%>% -->
+<!--   arrange(desc(count_video))%>% -->
+<!--   mutate(channel = glue("<a href={url_channel}>{name_channel}</a>"))%>% -->
+<!--   mutate(url_twitter = case_when(!is.na(id_twitter)~glue("<a href=https://twitter.com/{id_twitter}>@{id_twitter}</a>"), -->
+<!--                                  TRUE~"-"))%>% -->
+<!--   mutate(name_channel = as.factor(name_channel))%>% -->
+<!--   select(Channel = channel, Twitter =url_twitter, `Number of videos` = count_video, `Total number of views` =  count_view) -->
+
+
+
+<!-- ``` -->
+
+
+<!-- ```{r} -->
+<!-- tb_perf_channel%>% -->
+<!--   DT::datatable(escape = FALSE, -->
+<!--                 filter = list(position = 'top', clear = FALSE), -->
+<!--                 options = list( -->
+<!--     search = list( caseInsensitive = TRUE), -->
+<!--     pageLength = 20 -->
+<!--   ), -->
+<!--   caption = glue("Oldest update: {date_update}")) -->
+
+<!-- ``` -->
+
+
+
+<!-- # Videos -->
+
+<!-- Column {.tabset} -->
+<!-- ------------------------------------- -->
+
+
+<!-- ### All Youtube Videos from R-Ladies channels -->
+
+
+<!-- ```{r} -->
+<!-- gg<- -->
+<!--   tb_perf%>% -->
+<!--   filter(str_detect(name_channel,fixed("ladies",ignore_case = TRUE)))%>% -->
+<!--   mutate(name_channel= factor(name_channel,ordered = T), -->
+<!--          name_channel=fct_rev(name_channel))%>% -->
+<!--          #, -->
+<!--          #name_channel = reorder(name_channel,name_channel,length) -->
+<!--          #)%>% -->
+<!--   ggplot(aes(x = ymd_hms_video, y = name_channel,color = name_channel))+ -->
+<!--   scale_x_datetime(limits = range(tb_perf$ymd_hms_video))+ -->
+<!--   geom_point_interactive(aes(tooltip = title_video, -->
+<!--                              onclick = paste0('window.open("', url_video , '")'), -->
+<!--                              data_id = id_video), -->
+<!--                          show.legend = F)+ -->
+<!--   labs(title = "R-Ladies channels - Click to access the video",  -->
+<!--        x = "Release date",y = "")+ -->
+<!--   #scale_y_reverse()+ -->
+<!--   theme_bw()+ -->
+<!--   theme(axis.text.y = element_text(size=2), -->
+<!--         axis.text.x = element_text(size=4), -->
+<!--         axis.title.x = element_text(size=5), -->
+<!--         panel.grid.minor.y = element_line(size=1)) -->
+<!-- girafe(code = print(gg), -->
+<!--        pointsize = 1, -->
+<!--        options = list( -->
+<!--          opts_sizing(rescale = TRUE, width = 1)), -->
+<!--        height_svg = 2.4) -->
+<!-- ``` -->
+
+
+
+
+
+
+
+
+<!-- ### All Youtube Videos -->
+
+
+<!-- ```{r} -->
+<!-- gg<- -->
+<!--   tb_perf%>% -->
+<!--   filter(!str_detect(name_channel,fixed("ladies",ignore_case = TRUE)))%>% -->
+<!--   mutate(name_channel= factor(name_channel,ordered = T), -->
+<!--          name_channel=fct_rev(name_channel))%>% -->
+<!--          #, -->
+<!--          #name_channel = reorder(name_channel,name_channel,length) -->
+<!--          #)%>% -->
+<!--   ggplot(aes(x = ymd_hms_video, y = name_channel,color = name_channel))+ -->
+<!--   scale_x_datetime(limits = range(tb_perf$ymd_hms_video))+ -->
+<!--   geom_point_interactive(aes(tooltip = title_video, -->
+<!--                              onclick = paste0('window.open("', url_video , '")'), -->
+<!--                              data_id = id_video), -->
+<!--                          show.legend = F)+ -->
+<!--   labs(title = "Other channels - Click to access the video",  -->
+<!--        x = "Release date",y = "")+ -->
+<!--   #scale_y_reverse()+ -->
+<!--   theme_bw()+ -->
+<!--   theme(axis.text.y = element_text(size=2), -->
+<!--         axis.text.x = element_text(size=4), -->
+<!--         axis.title.x = element_text(size=5), -->
+<!--         panel.grid.minor.y = element_line(size=1)) -->
+<!-- girafe(code = print(gg), -->
+<!--        pointsize = 1, -->
+<!--        options = list( -->
+<!--          opts_sizing(rescale = TRUE, width = 1)), -->
+<!--        height_svg = 2.4) -->
+<!-- ``` -->
+
+<!-- ### Table of all Youtube Videos -->
+
+
+<!-- ```{r} -->
+<!-- tb_perf_video%>% -->
+<!--   DT::datatable(escape = FALSE, -->
+<!--                 filter = list(position = 'top', clear = FALSE), -->
+<!--                 options = list( -->
+<!--     search = list( caseInsensitive = TRUE), -->
+<!--     pageLength = 20 -->
+<!--   ), -->
+<!--   caption = glue("Oldest update: {date_update}")) -->
+
+<!-- ``` -->
 
